--- a/_posts/2025-09-15-免费-LLM-API-汇总.md
+++ b/_posts/2025-09-15-免费-LLM-API-汇总.md
@@ -56,6 +56,19 @@ tags:
 
 
 
+## iFlow
+
+目前免费调用，请关注 [限额调整](https://platform.iflow.cn/docs/limitSpeed)
+
+| 参数     | 值                                                       |
+| :------- | :------------------------------------------------------- |
+| BASE_URL | `https://api.iflow.cn/v1`                                |
+| API_KEY  | [点击获取](https://platform.iflow.cn/profile?tab=apiKey) |
+
+[点击查看文档](https://platform.iflow.cn/docs/api-reference)
+
+
+
 ## ModelScope
 
 每天提供2000次免费调用，部分模型限制200次
@@ -67,7 +80,58 @@ tags:
 
 [点击查看文档](https://www.modelscope.cn/docs/model-service/API-Inference/intro)
 
+目前可以免费使用的模型：[点击查看](https://platform.iflow.cn/models)
 
+
+
+## SiliconFlow
+
+| 参数     | 值                                                  |
+| :------- | :-------------------------------------------------- |
+| BASE_URL | `https://api.siliconflow.cn/v1`                     |
+| API_KEY  | [点击获取](https://cloud.siliconflow.cn/account/ak) |
+
+[点击查看文档](https://docs.siliconflow.cn/cn/api-reference/chat-completions/chat-completions)
+
+目前可免费使用的模型：
+
+- **语言模型**
+
+  - `THUDM/GLM-4.1V-9B-Thinking`
+  - `Qwen/Qwen3-8B`
+  - `tencent/Hunyuan-MT-7B`
+  - `deepseek-ai/DeepSeek-R1-0528-Qwen3-8B`
+  - `THUDM/GLM-Z1-9B-0414`
+  - `deepseek-ai/DeepSeek-R1-Distill-Qwen-7B`
+  - `Qwen/Qwen2.5-7B-Instruct`
+  - `Qwen/Qwen2.5-Coder-7B-Instruct`
+  - `THUDM/GLM-4-9B-0414`
+  - `internlm/internlm2_5-7b-chat`
+  - `THUDM/glm-4-9b-chat`
+  - `Qwen/Qwen2-7B-Instruct`
+
+- **图片生成**
+
+  - `Kwai-Kolors/Kolors`
+
+- **语音生成**
+
+  - `FunAudioLLM/SenseVoiceSmall`
+
+- **嵌入模型**
+
+  - `netease-youdao/bce-embedding-base_v1`
+  - `BAAI/bge-m3`
+  - `BAAI/bge-large-zh-v1.5`
+  - `BAAI/bge-large-en-v1.5`
+
+- **重排模型**
+
+  - `netease-youdao/bce-reranker-base_v1`
+
+  - `BAAI/bge-reranker-v2-m3`
+
+    
 
 ## BigModel
 
@@ -80,17 +144,22 @@ tags:
 
 目前可免费使用的模型：
 
-- 旗舰模型
+- **旗舰模型**
+  
   - `GLM-4.5-Flash`
-
-- 推理模型
+  
+- **推理模型**
+  
   - `GLM-4-Flash-250414`
   - `GLM-Z1-Flash`
-- 视觉模型
+- **视觉模型**
+  
   - `GLM-4.1V-Thinking-Flash`
-- 图像生成
+- **图像生成**
+  
   - `CogView-3-Flash`
-- 视频生成
+- **视频生成**
+  
   - `CogVideoX-Flash`
   
     
@@ -111,3 +180,4 @@ tags:
 | API_KEY  | [点击获取](https://z.ai/manage-apikey/apikey-list) |
 
 [点击查看限额](https://z.ai/manage-apikey/rate-limits)
+
