--- a/_posts/2025-09-15-免费-LLM-API-汇总.md
+++ b/_posts/2025-09-15-免费-LLM-API-汇总.md
@@ -56,16 +56,79 @@ tags:
 
 
 
+## Nvidia
+
+RPM 40
+
+| 参数     | 值                                                     |
+| :------- | :----------------------------------------------------- |
+| BASE_URL | `https://integrate.api.nvidia.com/v1`                  |
+| API_KEY  | [点击获取](https://build.nvidia.com/settings/api-keys) |
+
+
+
+## Ollama
+
+目前测试，RPH、RPD 未知
+
+| 参数     | 值                                           |
+| :------- | :------------------------------------------- |
+| BASE_URL | `https://ollama.com/v1`                      |
+| API_KEY  | [点击获取](https://ollama.com/settings/keys) |
+
+目前可以免费使用的模型：
+
+- `qwen3-coder:480b`
+
+- `gpt-oss:120b`
+
+- `gpt-oss:20b`
+
+- `deepseek-v3.1:671b`
+
+  
+
+## LongCat
+
+目前公测免费调用TPD限制为50万，[点击这里申请更多额度到500万](https://longcat.chat/platform/usage)
+
+| 参数     | 值                                                 |
+| :------- | :------------------------------------------------- |
+| BASE_URL | `ttps://api.longcat.chat/openai/v1`                |
+| API_KEY  | [点击获取](https://longcat.chat/platform/api_keys) |
+
+[点击查看文档](https://longcat.chat/platform/docs/zh/APIDocs.html)
+
+
+
 ## iFlow
 
-目前免费调用，请关注 [限额调整](https://platform.iflow.cn/docs/limitSpeed)
+目前公测免费调用但限制并发为1，请关注 [限额调整](https://platform.iflow.cn/docs/limitSpeed)
 
 | 参数     | 值                                                       |
 | :------- | :------------------------------------------------------- |
-| BASE_URL | `https://api.iflow.cn/v1`                                |
+| BASE_URL | `https://apis.iflow.cn/v1`                               |
 | API_KEY  | [点击获取](https://platform.iflow.cn/profile?tab=apiKey) |
 
 [点击查看文档](https://platform.iflow.cn/docs/api-reference)
+
+目前可以免费使用的模型：
+
+- `tstars2.0`
+- `qwen3-coder`
+- `qwen3-max-preview`
+- `kimi-k2-0905`
+- `glm-4.5`
+- `kimi-k2`
+- `deepseek-v3.1`
+- `deepseek-r1`
+- `deepseek-v3`
+- `qwen3-32b`
+- `qwen3-235b-a22b-thinking-2507`
+- `qwen3-235b-a22b-instruct`
+- `qwen3-235b`
+
+[详情可点击查看](https://platform.iflow.cn/models)
 
 
 
@@ -79,8 +142,6 @@ tags:
 | API_KEY  | [点击获取](https://www.modelscope.cn/my/myaccesstoken) |
 
 [点击查看文档](https://www.modelscope.cn/docs/model-service/API-Inference/intro)
-
-目前可以免费使用的模型：[点击查看](https://platform.iflow.cn/models)
 
 
 
