--- a/_posts/2025-09-15-免费-LLM-API-汇总.md
+++ b/_posts/2025-09-15-免费-LLM-API-汇总.md
@@ -15,10 +15,6 @@ tags:
 | BASE_URL | `https://api.cerebras.ai/v1` |
 | API_KEY  | 注册完成自动创建             |
 
-通过邀请链接注册可以增加 20万  `Qwen3-480B` (Coder) 的每日限额，最多邀请5人提高总额度到200万/天
-
-~~[邀请链接0](https://cloud.cerebras.ai?referral_code=rydjkpvx)~~，[邀请链接1](https://cloud.cerebras.ai?referral_code=trjptc44)，[邀请链接2](https://cloud.cerebras.ai?referral_code=cdypjm99)，[邀请链接3](https://cloud.cerebras.ai?referral_code=he28n828)，[邀请链接4](https://cloud.cerebras.ai?referral_code=5j6dwhd3)，[邀请链接5](https://cloud.cerebras.ai?referral_code=xdyjvpw4)
-
 [点选 Limits](https://cloud.cerebras.ai) 查看限额
 
 
@@ -145,6 +141,24 @@ RPM 40
 
 
 
+## Huawei
+
+每周可免费领取一张代金券，[点击查看详情](https://developer.huaweicloud.com/space/incentive/other-activity/deepseek-tokens/detail/A000038)
+
+| 参数     | 值                                                           |
+| :------- | :----------------------------------------------------------- |
+| BASE_URL | `https://api.modelarts-maas.com/v1`                          |
+| API_KEY  | [点击获取](https://console.huaweicloud.com/modelarts/?locale=zh-cn&region=cn-southwest-2#/model-studio/authmanage) |
+
+代金券支持购买以下模型套餐：
+
+- `DeepSeek-V3`
+- `DeepSeek-R1`
+
+[点击查看剩余额度](https://account.huaweicloud.com/usercenter/?region=cn-southwest-2&locale=zh-cn#/userindex/myResourcePackage)
+
+
+
 ## SiliconFlow
 
 | 参数     | 值                                                  |
@@ -230,6 +244,25 @@ RPM 40
 [点击查看文档](https://docs.bigmodel.cn/api-reference/%E6%A8%A1%E5%9E%8B-api/%E5%AF%B9%E8%AF%9D%E8%A1%A5%E5%85%A8)
 
 
+
+## V0
+
+个人每月赠送5刀额度，团队每月赠送30刀额度
+
+| 参数     | 值                                            |
+| :------- | :-------------------------------------------- |
+| BASE_URL | `https://api.v0.dev/v1`                       |
+| API_KEY  | [点击获取](https://v0.app/chat/settings/keys) |
+
+目前可免费使用的模型：
+
+- `v0-1.0-md`
+
+- `v0-1.5-lg`
+
+- `v0-1.5-md`
+
+  
 
 ## Z
 
