--- a/_posts/2025-09-15-免费-LLM-API-汇总.md
+++ b/_posts/2025-09-15-免费-LLM-API-汇总.md
@@ -159,6 +159,24 @@ RPM 40
 
 
 
+## StreamLake
+
+RPM 20 TPM 200w
+
+| 参数     | 值                                                           |
+| :------- | :----------------------------------------------------------- |
+| BASE_URL | `https://vanchin.streamlake.ai/api/gateway/v1/endpoints`     |
+| API_KEY  | [点击获取](https://console.streamlake.ai/console/wanqing/api-key) |
+
+目前可免费使用的模型：
+
+- `KAT-Coder-Air-V1`
+- `KAT-Coder-Exp-72B-1010`
+
+[点击查看文档](https://www.streamlake.ai/document/DOC/mg6k6nlp8j6qxicx4c9)
+
+
+
 ## SiliconFlow
 
 | 参数     | 值                                                  |
