--- a/_posts/2025-11-05-五笔输入法笔记.md
+++ b/_posts/2025-11-05-五笔输入法笔记.md
@@ -10,7 +10,7 @@ tags:
 
 ## 字根
 
-![字根表](C:\Users\daosu\AppData\Roaming\Typora\typora-user-images\image-20251105233821370.png)
+![字根表](image-20251105233821370.png)
 
 ### 横区：G → A
 
@@ -139,7 +139,7 @@ X：慈母无心弓和匕 幼无力
 
 ### 简码
 
-![一级简码](C:\Users\daosu\AppData\Roaming\Typora\typora-user-images\image-20251105230424059.png)
+![一级简码](image-20251105230424059.png)
 
 - 一级简码：键位 + 空格
 - 二级简码：前两个字根 + 空格
