--- a/_posts/2025-11-05-五笔输入法笔记.md
+++ b/_posts/2025-11-05-五笔输入法笔记.md
@@ -62,7 +62,7 @@ P：之字军盖道建底 摘示衣
 
 ### 折区：N → X
 
-N：已半巳满不出已 左框折尸心和羽
+N：已半巳满不出己 左框折尸心和羽
 
 B：子耳了也框向上
 
@@ -133,7 +133,8 @@ X：慈母无心弓和匕 幼无力
 **注意：**
 
 1. 所有包围和半包围结构取被包围部分的末笔
-2. 类似 九、刀、七、力、匕 字根做末笔一律取折
+2. 类似 成、我、戈、伐 末笔取撇
+3. 类似 九、刀、七、力、匕 字根做末笔一律取折
 
 ## 简码及词组的输入
 
@@ -141,9 +142,9 @@ X：慈母无心弓和匕 幼无力
 
 ![一级简码](image-20251105230424059.png)
 
-- 一级简码：键位 + 空格
-- 二级简码：前两个字根 + 空格
-- 三级简码：前三个字根 + 空格
+- 一级简码（25）：键位 + 空格
+- 二级简码（606）：前两个字根 + 空格
+- 三级简码（）：前三个字根 + 空格
 
 
 ### 词组
@@ -166,4 +167,12 @@ X：慈母无心弓和匕 幼无力
 
     中华人民共和国：KWWL
 
- 
+## 在线练习
+
+- 字根练习：https://www.wubidz.cn/wubidazi/
+
+- 字根拆解：https://wubi.xuelai.com/
+
+- 速度练习：https://dazi.91xjr.com/typing/train/wb_char.html
+
+  
