--- a/_posts/2025-12-26-IOS开启DOH.md
+++ b/_posts/2025-12-26-IOS开启DOH.md
@@ -1,6 +1,6 @@
 ---
 layout: mypost
-title: IOS开启DOH
+title: IOS 开启 DoH
 date: 2025-12-26
 published: True
 categories: iOS
@@ -8,17 +8,17 @@ tags:
  - iOS
 ---
 
-## 创建DOH
+## 创建DoH
 
 登录 Cloudflare，[点击](https://one.dash.cloudflare.com/?to=/:account/networks/resolvers-proxies/locations/add-non-authed) 创建 DNS 位置，位置名称自定义，并如图勾选，然后依次点击 继续 - 完成 完成创建
 
-![Doh](屏幕截图 2025-12-26 101340.png)
+![DoH](屏幕截图 2025-12-26 101340.png)
 
 记录好 **基于 HTTPS 的 DNS** 的值，形如 `https://xxxxxx.cloudflare-gateway.com/dns-query` 后面将会用到
 
 ## 创建描述文件
 
-将文件重命名为 `dns-over-https.mobileconfig` 后下载到 IOS 设备，然后在 IOS 设备进入 **设置** → **通用** →  **VPN 与设备管理**，找到证书（显示为 `EMAS HTTPDNS DoH Configuration`)，点击安装
+替换 DoH 后将文件重命名为 `dns-over-https.mobileconfig` 后下载到 IOS 设备，然后在 IOS 设备进入 **设置** → **通用** →  **VPN 与设备管理**，找到证书（显示为 `EMAS HTTPDNS DoH Configuration`)，点击安装
 
 ```xm
 <?xml version="1.0" encoding="UTF-8"?>
@@ -76,4 +76,4 @@ tags:
 
 - [Cloudflare/dns-location](https://developers.cloudflare.com/cloudflare-one/networks/resolvers-and-proxies/dns/locations/)
 
-- [macOS中或iOS等苹果系统中使用DNS over HTTPS(DoH)保护你的网络隐私](https://www.lvtao.net/system/apple-macos-ios-doh-dns-over-https.html)
+- [IOS使用DoH直连L站 ](https://linux.do/t/topic/1352136)
