--- a/_posts/2025-12-26-IOS开启DOH.md
+++ b/_posts/2025-12-26-IOS开启DOH.md
@@ -1,6 +1,6 @@
 ---
 layout: mypost
-title: IOS 开启 DoH
+title: iOS 开启 DoH
 date: 2025-12-26
 published: True
 categories: iOS
@@ -18,7 +18,7 @@ tags:
 
 ## 创建描述文件
 
-替换 DoH 后将文件重命名为 `dns-over-https.mobileconfig` 后下载到 IOS 设备，然后在 IOS 设备进入 **设置** → **通用** →  **VPN 与设备管理**，找到证书（显示为 `EMAS HTTPDNS DoH Configuration`)，点击安装
+替换 DoH 接入地址后将文件重命名为 `dns-over-https.mobileconfig` 后下载到 iOS 设备，然后在 iOS 设备进入 **设置** → **通用** →  **VPN 与设备管理**，找到证书（显示为 `EMAS HTTPDNS DoH Configuration`)，点击安装
 
 ```xm
 <?xml version="1.0" encoding="UTF-8"?>
@@ -76,4 +76,4 @@ tags:
 
 - [Cloudflare/dns-location](https://developers.cloudflare.com/cloudflare-one/networks/resolvers-and-proxies/dns/locations/)
 
-- [IOS使用DoH直连L站 ](https://linux.do/t/topic/1352136)
+- [iOS使用DoH直连L站 ](https://linux.do/t/topic/1352136)
